# elementree

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/elementree/: elementree.py  utils.py
src/elementree/lidar/: __init__.py
src/elementree/lidar/octree/: Octree.py  OctreeLeaf.py  Region.py  cfg.py  region.py  xyz.py
tests/: __init__.py  test_octree.py  test_region.py  test_utils.py
tests/unit/: test_octree.py  test_region.py  test_utils.py
